--- a/lrr-django/TIC_GestioPersonal/LRR_centre/templates/home.html
+++ b/lrr-django/TIC_GestioPersonal/LRR_centre/templates/home.html
@@ -6,6 +6,7 @@
     <title>Laia Rodríguez Ramos</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hola {{ professor.nom }} {{ professor.cognom }}</h1>
+    <h3>M'agrada Django. Pista: NO.</h3>
 </body>
 </html>
