Ara vaig a preparar el db.

--- a/lrr-django/TIC_GestioPersonal/LRR_centre/templates/student.html
+++ b/lrr-django/TIC_GestioPersonal/LRR_centre/templates/student.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     {% include "header/header.html" %}
-    <h1>Hola {{ professor.nom }} {{ professor.cognom }}</h1>
-    <h3>M'agrada Django. Pista: NO. Tinc {{ professor.edat }} anys.</h3>
-    <h4>P00-P01</h4>
+    <h1>Informació Alumnat TIC BCN (aplicació centre)</h1>
+    <h3>{{ alumnat.nom }}</h3>
 </body>
 </html>
