--- a/lrr-django/TIC_GestioPersonal/LRR_centre/templates/header/header.html
+++ b/lrr-django/TIC_GestioPersonal/LRR_centre/templates/header/header.html
@@ -6,9 +6,6 @@
     <title>Laia Rodríguez Ramos</title>
 </head>
 <body>
-    {% include "header/header.html" %}
-    <h1>Hola {{ professor.nom }} {{ professor.cognom }}</h1>
-    <h3>M'agrada Django. Pista: NO. Tinc {{ professor.edat }} anys.</h3>
-    <h4>P00-P01</h4>
+    <nav style="background-color: rgba(96, 226, 226, 0.466);">Navbar - Laia Rodríguez</nav>
 </body>
 </html>
