--- a/lrr-django/TIC_GestioPersonal/LRR_centre/templates/index.html
+++ b/lrr-django/TIC_GestioPersonal/LRR_centre/templates/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     {% include "header/header.html" %}
-
-    <a href="/centre/teacher">Professorat</a>
-    <a href="/centre/student">Alumnes</a>
+    <a href="{% url 'user_form' %}">Afegir usuaris</a>
+    <a href="{% url 'teacher' %}">Professorat</a>
+    <a href="{% url 'student' %}">Alumnes</a>
     <h1>Hola {{ professor.nom }} {{ professor.cognom }}</h1>
     <h3>M'agrada Django. Pista: NO. Tinc {{ professor.edat }} anys.</h3>
     <h4>P00-P01</h4>
