Mirar el rol, que em falta refinar. Ara em retorna 2 alumne. Només vull el alumne

--- a/lrr-django/TIC_GestioPersonal/LRR_centre/templates/form.html
+++ b/lrr-django/TIC_GestioPersonal/LRR_centre/templates/form.html
@@ -1,12 +1,16 @@
 {% block content %}
     <h1>Formulari</h1>
 
+    <style>
+        ul{display: none!important;}
+    </style>
+
     <form action="" method="POST">
         {% csrf_token %}
         {{form.as_p}}
         <input type="submit">
     </form>
 
-    <a href="{% url 'index' %}">Index</a>
+    <a href="{% url 'home' %}">Index</a>
 
 {% endblock %}
