--- a/lrr-django/TIC_GestioPersonal/LRR_centre/templates/index.html
+++ b/lrr-django/TIC_GestioPersonal/LRR_centre/templates/index.html
@@ -10,8 +10,15 @@
     <a href="{% url 'user_form' %}">Afegir usuaris</a>
     <a href="{% url 'teacher' %}">Professorat</a>
     <a href="{% url 'student' %}">Alumnes</a>
-    <h1>Hola {{ professor.nom }} {{ professor.cognom }}</h1>
-    <h3>M'agrada Django. Pista: NO. Tinc {{ professor.edat }} anys.</h3>
-    <h4>P00-P01</h4>
+
+    {% block content %}
+
+    {% endblock %}
+    
+    <!-- 
+        <h1>Hola {{ professor.nom }} {{ professor.cognom }}</h1>
+        <h3>M'agrada Django. Pista: NO. Tinc {{ professor.edat }} anys.</h3>
+        <h4>P00-P01</h4> 
+    -->
 </body>
 </html>
