Acabada. Falta entregar video.

--- a/lrr-django/TIC_GestioPersonal/LRR_centre/templates/delete_user.html
+++ b/lrr-django/TIC_GestioPersonal/LRR_centre/templates/delete_user.html
@@ -8,8 +8,9 @@
 
     <form action="" method="POST">
         {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit">
+        <p>Segur que vols eliminar a "{{object.nom}}" ?</p>
+        <button><a href="{% url 'index' %}">Tornar</a></button>
+        <input type="submit" value="CONFIRM"/>
     </form>
 
 {% endblock %}
