--- a/lrr-django/TIC_GestioPersonal/LRR_centre/templates/student.html
+++ b/lrr-django/TIC_GestioPersonal/LRR_centre/templates/student.html
@@ -1,7 +1,31 @@
-
     {% extends 'index.html' %}
     {% block content %}
+        <style>
+            h1{text-align: center;}
+            table{
+                background-color:#b1b1b1;
+                border:1px solid grey;
+                margin: auto;
+                padding: 2px;
+            }
+            thead th{
+                gap: 20px;
+                border-bottom: 2px solid rgb(123, 228, 149);
+                text-align: center;
+            }
+            tbody {
+                background-color: rgb(71, 71, 71);
+                gap: 20px;
+                text-align: center;
+                color: #ccc;
+            }
+            table a{
+                color: #ccc !important;
+            }
+        </style>
+        
         <h1>Informació Alumnat TIC BCN (aplicació centre)</h1>
+        
         <table>
             <thead>
                 <tr>
@@ -12,7 +36,6 @@
                     <th>ROL</th>
                     <th>CORREU</th>
                     <th>ASSIGNATURES</th>
-
                 </tr>
             </thead>
             <tbody>
@@ -23,11 +46,12 @@
                     <td>{{ alumne.cognom }}</td>
                     <td>{{ alumne.edat }}</td>
                     <td>{{ alumne.rol}}</td>
-                    <td>{{ alumne.correu }}</td>                        
-                    <td>{{ alumne.assignatures }}</td>
+                    <td>{{ alumne.correu }}</td>
+                    <td>{{ alumne.assignatures }}</td>         
+                    <td><a href="{% url 'update-user' alumne.id %}">EDIT</a></td>
+                    <td><a href="{% url 'delete-user' alumne.id %}">ELIMINA</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <a href="{% url 'home' %}"> Torna </a>
     {% endblock %}
